// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`subIdShape > fails for the phone_number format spelled in the wire vocabulary 1`] = `
[
  {
    "key": "subjectId.phoneNumber",
    "message": "subjectId of format "phone_number" requires member "phoneNumber"",
  },
]
`;

exports[`subIdShape > fails when a required member is null 1`] = `
[
  {
    "key": "subjectId.id",
    "message": "subjectId of format "opaque" requires member "id"",
  },
]
`;

exports[`subIdShape > fails when a required member of the format is missing 1`] = `
[
  {
    "key": "subjectId.subject",
    "message": "subjectId of format "iss_sub" requires member "subject"",
  },
]
`;

exports[`subIdShape > fails when format is missing 1`] = `
[
  {
    "key": "subjectId.format",
    "message": "subjectId.format must be a string",
  },
]
`;

exports[`subIdShape > fails when subjectId is not an object 1`] = `
[
  {
    "key": "subjectId",
    "message": "subjectId must be an object",
  },
]
`;

exports[`subIdShape > fails when the account format's required member is empty 1`] = `
[
  {
    "key": "subjectId.uri",
    "message": "subjectId of format "account" requires member "uri"",
  },
]
`;

exports[`subIdShape > fails when the aliases format's required member is empty 1`] = `
[
  {
    "key": "subjectId.identifiers",
    "message": "subjectId of format "aliases" requires member "identifiers"",
  },
]
`;

exports[`subIdShape > fails when the did format's required member is empty 1`] = `
[
  {
    "key": "subjectId.url",
    "message": "subjectId of format "did" requires member "url"",
  },
]
`;

exports[`subIdShape > fails when the email format's required member is empty 1`] = `
[
  {
    "key": "subjectId.email",
    "message": "subjectId of format "email" requires member "email"",
  },
]
`;

exports[`subIdShape > fails when the iss_sub format's required member is empty 1`] = `
[
  {
    "key": "subjectId.subject",
    "message": "subjectId of format "iss_sub" requires member "subject"",
  },
]
`;

exports[`subIdShape > fails when the opaque format's required member is empty 1`] = `
[
  {
    "key": "subjectId.id",
    "message": "subjectId of format "opaque" requires member "id"",
  },
]
`;

exports[`subIdShape > fails when the phone_number format's required member is empty 1`] = `
[
  {
    "key": "subjectId.phoneNumber",
    "message": "subjectId of format "phone_number" requires member "phoneNumber"",
  },
]
`;

exports[`subIdShape > fails when the uri format's required member is empty 1`] = `
[
  {
    "key": "subjectId.uri",
    "message": "subjectId of format "uri" requires member "uri"",
  },
]
`;
